--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -134,7 +134,7 @@ p {
 .authPage .container form .inputTag div svg {
   width: 10%;
   font-size: 1.5rem;
-  background: #2d5649;
+  background: #e232bcff;
   height: 100%;
   padding: 8px;
   color: #fff;
@@ -153,10 +153,10 @@ p {
 .authPage .container form a {
   padding: 12px;
   text-align: center;
-  border: 1px solid #2d5649;
+  border: 1px solid #e232bcff;
   margin-top: 25px;
   font-weight: 700;
-  color: #2d5649;
+  color: #a12a7eff;
   font-size: 1.2rem;
   text-decoration: none;
   border-radius: 7px;
@@ -214,7 +214,7 @@ p {
   color: #f1f3f6;
 }
 .footerShow div a:hover {
-  color: #2d5649;
+  color: #e232bcff;
   transform: scale(1.2);
   transition: all 0.3s;
 }
@@ -296,7 +296,7 @@ p {
   align-items: center;
   justify-content: center;
   padding: 10px;
-  color: #2d5649;
+  color: #e232bcff;
 }
 .heroSection .details .card .content p:first-child {
   font-weight: bold;
@@ -401,7 +401,7 @@ p {
 }
 .howitworks .container .banner .card svg {
   font-size: 30px;
-  color: #2d5649;
+  color: #a12a7eff;
 }
 .howitworks .container .banner .card p:last-child {
   font-size: 14px;
@@ -465,7 +465,7 @@ p {
   font-size: 24px;
   padding: 10px;
   background: rgb(233, 249, 255);
-  color: #2d5649;
+  color: #e232bcff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -540,7 +540,7 @@ p {
 .companies .container .banner .card .content .icon {
   padding: 10px;
   font-size: 24px;
-  color: #2d5649;
+  color: #e232bcff;
   background: rgb(233, 249, 255);
   display: flex;
   justify-content: center;
@@ -555,7 +555,7 @@ p {
   color: gray;
 }
 .companies .container .banner .card button {
-  color: #2d5649;
+  color: #a12a7eff;
   background: rgb(233, 249, 255);
   font-weight: bold;
   font-size: 20px;
@@ -639,7 +639,7 @@ p {
   text-decoration: none;
   padding: 7px;
   font-size: 20px;
-  color: #2d5649;
+  color: #a12a7eff;
   background: rgb(233, 249, 255);
   width: 100%;
   display: block;
@@ -684,14 +684,14 @@ p {
 }
 .jobDetail .container .banner p {
   font-weight: bold;
-  color: #2d5649;
+  color: #a12a7eff;
 }
 .jobDetail .container .banner p span {
   color: #18191c;
   font-weight: 400;
 }
 .jobDetail .container .banner a {
-  background-color: #2d5649;
+  background-color: #e232bcff;
   color: rgb(233, 249, 255);
   font-size: 20px;
   font-weight: 400;
@@ -745,7 +745,7 @@ p {
   outline: none;
 }
 .application .container form button {
-  background-color: #2d5649;
+  background-color: #e232bcff;
   color: rgb(233, 249, 255);
   font-size: 20px;
   font-weight: 400;
@@ -755,7 +755,7 @@ p {
   width: 100%;
 }
 .application .container form button:hover {
-  background-color: #184235;
+  background-color: #e232bcff;
   transition: all 0.3s;
   cursor: pointer;
 }
@@ -943,7 +943,7 @@ p {
 }
 .job_post .container form button {
   width: 100%;
-  background: #2d5649;
+  background: #e232bcff;
   font-size: 20px;
   padding: 10px 30px;
   border: none;
@@ -1092,7 +1092,7 @@ p {
 .myJobs .container .banner .card .button_wrapper .check_btn {
   background: transparent;
   color: #184235;
-  border: 1px solid #184235;
+  border: 1px solid #e232bcff;
   border-radius: 7px;
   width: 50px;
   padding: 8px;
@@ -1103,7 +1103,7 @@ p {
 }
 .myJobs .container .banner .card .button_wrapper .check_btn:hover {
   transition: all 0.3s;
-  background: #184235;
+  background: #e232bcff;
   color: #f1f3f6;
 }
 .myJobs .container .banner .card .button_wrapper .cross_btn {
@@ -1183,11 +1183,11 @@ nav .menu button {
 }
 nav .menu button:hover {
   color: #f1f3f6;
-  background: #184235;
+  background: #e232bcff;
   transition: all 0.3s;
   cursor: pointer;
   font-weight: 500;
-  border: 1px solid #184235;
+  border: 1px solid #e232bcff;
 }
 nav .menu li a {
   color: #f1f3f6;
@@ -1197,13 +1197,13 @@ nav .menu li a {
   position: relative;
 }
 nav .menu li a:hover {
-  color: #2d5649;
+  color: #e232bcff;
   transition: all 0.3s;
 }
 nav .menu li a::before {
   content: "";
   position: absolute;
-  background: #184235;
+  background: #e232bcff;
   height: 1px;
   width: 100%;
   left: -100%;
@@ -1273,12 +1273,12 @@ nav .hamburger {
     -moz-box-shadow: 9px 0px 16px 0px rgba(0, 0, 0, 0.75);
   }
   nav .show-menu li a {
-    color: #184235;
+    color: #e232bcff;
     font-weight: 600;
   }
   nav .show-menu button {
-    color: #184235;
-    border: 1px solid #184235;
+    color: #e232bcff;
+    border: 1px solid #e232bcff;
     font-weight: 600;
   }
   nav .show-menu button:hover {
@@ -1304,12 +1304,12 @@ nav .hamburger {
   font-weight: 500;
   padding: 7px 30px;
   background: transparent;
-  border: 1px solid #184235;
-  color: #184235;
+  border: 1px solid #e232bcff;
+  color: #e232bcff;
   text-decoration: none;
 }
 .notfound .content a:hover {
-  background: #184235;
+  background: #e232bcff;
   transition: all 0.3s;
   color: #f1f3f6;
 }
