--- a/frontend/src/components/Auth/Auth.css
+++ b/frontend/src/components/Auth/Auth.css
@@ -13,7 +13,7 @@
   color: rgb(194, 111, 154) !important;   /* rosy magenta */
   font-size: 1em;
   font-weight: 900;
-  font-style: italic;
+  font-style: bold;
   margin-right: 0.2em;
 }
 .authPage .logo-exa {
